<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/feedBack"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.neodevloper.hdwallpaper2021.activitys.assistant.reason.FeedBackActivity">


        <LinearLayout
            android:layout_gravity="center"
            android:background="@color/yellow"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/send_feed"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/white"
                android:hint="Email"
                android:padding="10dp" />

            <EditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/white"
                android:hint="Subject..."
                android:padding="10dp" />

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/white"
                android:hint="@string/enter_message_here"
                android:padding="50dp" />

            <Button
                android:id="@+id/sendFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:padding="15dp"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>


</ScrollView>